--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ Dark green: #28b485
 }
 
 body {
-    font-family: "Lato" sans-serif;
+    font-family: Lato, sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.7;
@@ -30,5 +30,86 @@ body {
         url(../img/hero.jpg);
     background-size: cover;
     background-position: top;
+    position: relative;
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+}
+
+.logo-box {
+    position: absolute;
+    top: 40px;
+    left: 40px;;
+
+}
+
+.logo {
+    height: 35px;
+}
+
+/* .logo:hover {
+    animation: moveInRight 1s ease-in-out;
+} */
+
+.text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.header-primary {
+    color: #fff;
+    text-transform: uppercase;
+    backface-visibility: hidden;
+}
+
+.header-primary-main {
+    display: block;
+    font-size: 60px;
+    font-weight: 400;
+    letter-spacing: 35px;
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    /* animation-delay: 3s; */
+    /* animation-iteration-count: 3; */
+    animation-timing-function: ease-out;
+}
+
+.header-primary-sub {
+    display: block;
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 17.4px;
+    animation: moveInRight 1s ease-in-out;
+}
+
+
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+
+    80% {
+        transform: translateX(20px);
+    }
+    
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+
+    80% {
+        transform: translateX(-20px);
+    }
+    
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
 }
